syntax = "proto3";
package pb;

import "common.proto";

// Strategy 策略
message Strategy {
  string id = 1;
  string name = 2;
  string user = 3;
  map<string, string> params = 4;
}

message StrategyList { repeated Strategy list = 1; }

message ReqDeleteStrategy { string id = 1; }

message ReqGetStrategy { string id = 1; }